<resources>
    <string name="app_name">OceanBatApp</string>
    <string name="home_text">Home</string>
    <string name="favourite_text">Favourite</string>
    <string name="profile_text">Profile</string>
    <string name="history_text">History</string>
    <string name="nav_header">Menu</string>
    <string name="open_text">open</string>
    <string name="close_text">close</string>
    //LOGIN PAGE
    <string name="LOGIN">LOGIN</string>
    <string name="Email">Email :</string>
    <string name="Password">Password :</string>

    //SignUp Page
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="birthdate">Birth Date :</string>
    <string name="name_text">Name :</string>
    <string name="rePassword">Re-Password :</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="input_name">Enter Your Name</string>
    <string name="register_name">Enter Your Name</string>
    <string name="settings_text">Settings</string>
    <string name="log_out_text">Log Out</string>


    //services text

    <string name="booking_car_text">Car services Cleaning</string>
    <string name="booking_motor_text">Motorcycle services Cleaning</string>
    <string name="booking_house_text">House services Cleaning</string>
    <string name="booking_garden_text">Garden services Cleaning</string>


    //
    <string name="Login">login</string>
    <string name="signUp">SIGN UP</string>
    <string name="text_home">HOME</string>
    <string name="button_detail">DETAIL</string>
    <string name="button_book">BOOK</string>
    <string name="text_car">CAR</string>
    <string name="text_motorcycle">MOTORCYCLE</string>
    <string name="text_house">HOUSE</string>
    <string name="text_garden">GARDEN</string>
    <string name="booking_text">Booking</string>
    <string name="services_text">Services</string>
    <string name="address_text">Address</string>
    <string name="time_text">Time</string>
    <string name="detail_text">Details of Things</string>
    <string name="description_hint">description</string>
    <string name="address_here_hint">Address Here</string>
    <string name="logo_text">Logo</string>

    <string name="text_details">DETAILS</string>

    //History Page
    <string name="text_title_history">Whats make you come to</string>
    <string name="text_title_page_history">HISTORY PAGE</string>

    //Button
    <string name ="text_BACK">BACK</string>
    <string name ="text_BOOK">BOOK</string>
    <string name ="text_DETAIL">DETAIL</string>


    //Detail Pages
    <string name="details_title_page">DETAILS PAGE</string>
    //Detail Car
    <string name="detail_title_car">DETAIL CAR SERVICE</string>
    <string name="detail_paragraph_car">Make a booking for us, we will wait you at our
    shop prepared to wash your car to the cleanest.
    \n\n  Operating Hour: 9am to 11am,
    \n 1pm to 6pm
    \n\n Price: Basic Cleaning 10 to 20 according to car size
    \n\n Full Cleaning including waxing : \n Below RM100</string>

    //Detail Motorcycle
    <string name="detail_title_motorcycle">DETAIL MOTORCYCLE SERVICE</string>
    <string name="detail_paragraph_motorcycle">Make a booking for us, we will wait you at our
    shop prepared to wash your motorcycle to the cleanest.
    \n\n  Operating Hour: 9am to 11am,
    \n 1pm to 6pm
    \n\n Price: Basic Cleaning 10 to 20 according to motorcycle size
    \n\n Full Cleaning including waxing : \n Below RM50</string>

    //Detail House
    <string name="detail_title_house">DETAIL HOUSE SERVICE</string>
    <string name="detail_paragraph_house">Make a booking for us, we will go to your place and our
    shop will clean your house to the cleanest.
    \n\n  Operating Hour: 9am to 11am,
    \n 1pm to 6pm
    \n\n Price: Basic Cleaning 10 to 20 according to house size
    \n\n Full Cleaning including waxing : \n Below RM200</string>

    //Detail Garden
    <string name="detail_title_garden">DETAIL GARDEN SERVICE</string>
    <string name="detail_paragraph_garden">Make a booking for us, we will go to your place and our
    shop will clean your garden to the cleanest.
    \n\n  Operating Hour: 9am to 11am,
    \n 1pm to 6pm
    \n\n Price: Basic Cleaning 10 to 20 according to garden size
    \n\n Full Cleaning including waxing : \n Below RM200</string>

    //navigationBar
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
