<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:padding="20dp"
    tools:context=".ActivityLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/logo_ocean_bat" />

        <TextView
            android:id="@+id/logo_sentence1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="Welcome"
            android:textColor="@color/Black"
            android:textSize="40sp"
            android:transitionName="logo_text"
            android:layout_below="@+id/logo_image"/>

        <TextView
            android:id="@+id/logo_sentence2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SignUp to start your new order"
            android:textSize="18sp"
            android:transitionName="logo_desc"
            android:layout_below="@+id/logo_sentence1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_below="@+id/logo_sentence2">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="name"
                android:inputType="textPersonName"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="email"
                android:inputType="textEmailAddress"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true" />

            <TextView
                android:id="@+id/Birthdate_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/input_text_date"
                android:layout_width="200dp"
                android:layout_height="51dp"
                android:layout_marginLeft="120dp"
                android:background="@color/LightSeaGreen"
                android:ems="10"
                android:hint="Select Birth Date"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone Number"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Phone Number"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/signUp_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:background="@color/LightSeaGreen"
                android:textColor="@color/White"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already Have An Account? LOGIN Now!"
                android:background="@color/White"
                android:textColor="@color/Black"/>

        </LinearLayout>


    </RelativeLayout>


</ScrollView>